--- a/src/clickerg/Boss/Boss.fxml
+++ b/src/clickerg/Boss/Boss.fxml
@@ -8,17 +8,12 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clickerg.FXMLDocumentController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clickerg.Boss">
    <children>
       <HBox alignment="CENTER" prefHeight="40.0" prefWidth="600.0">
          <children>
-            <Label text="Gold:" />
-            <Label fx:id="lb_goldCount" />
-            <Label text="GPC:">
-               <padding>
-                  <Insets left="20.0" />
-               </padding>
-            </Label>
+            <Label text="HP:" />
+            <Label fx:id="lb_HPCount" />
             <Label fx:id="label_goldPerClick" />
             <Button mnemonicParsing="false" onAction="#moreGPC" text="Button">
                <HBox.margin>
